# contexts/content-context/src/main/java/io/seekflux/content/domain/ContentType.java
@@ -1,0 +1,6 @@
+package io.seekflux.content.domain;
+
+public enum ContentType {
+    VIDEO,
+    ARTICLE
+}
